# browser-skill

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  gemini-extension.json  install.sh  package.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
.opencode/plugins/: browser.js
docs/decisions/: 2026-06-09-attach-real-user-profile.md  2026-06-09-builtin-aria-snapshot.md  2026-06-09-captcha-handling.md  2026-06-09-daemon-not-stateless-cli.md  2026-06-09-dedicated-profile-not-real.md  2026-06-09-patched-playwright.md  2026-06-12-ai-ref-snapshot.md  README.md
docs/rfc/: 2026-06-09-coordinate-grid-overlay.md  README.md
scripts/: bump.sh  uninstall.sh
skills/browser/: SKILL.md
skills/browser/site-guides/: airbnb.md  aviasales.md  chatgpt.md
src/browser_skill/: __init__.py  captcha.py  cli.py  daemon.py  driver.py  protocol.py  snapshot.py
