[project]
name = "browser-skill"
version = "0.2.0"
description = "Drive a real browser from a coding agent via a CLI over a persistent Playwright daemon."
requires-python = ">=3.10"
dependencies = ["patchright>=1.40"]

[project.optional-dependencies]
captcha = ["playwright-captcha>=0.1.5"]

[project.scripts]
browser = "browser_skill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["browser_skill"]
